<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="6"
    tools:context="com.shafagh.myfitnesshealthapplication.SignUp"
    android:background="@color/lightPurple">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar" />

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/sign_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="signUpEmail"
        style="@style/ButtonStyleFillIn"
        android:text="@string/sign_up_email" />

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent"
        style="@style/RLmargin"/>

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/sign_facebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="signUpPage"
        style="@style/ButtonStyleFillIn"
        android:text="@string/sign_up_facebook" />

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent"
        style="@style/RLmargin"/>

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/sign_google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="signUpPage"
        style="@style/ButtonStyleFillIn"
        android:text="@string/sign_up_google" />
</LinearLayout>
